# GeekBrains_FinalAttestationOfTheSpecializationBlock

./: .gitignore  DataBase_scheme.drawio  README.md  pyproject.toml
kennel/: controller.py  exception.py  main.py  model.py  view.py
kennel/templates/: add_smt.jinja  exception.jinja  exception_keyboardInterrupt.jinja  exception_noSuchOption.jinja  exception_valueError.jinja  list_smt.jinja  menu.jinja  menu_add_new_animal.jinja  menu_main.jinja  message.jinja  message_farewell.jinja  message_greeting.jinja
