[tool.poetry]
name = "Kennel"
version = "0.1.0"
description = ""
authors = ["Momotov Kirill <unknownman@live.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
